2012-12-25 belangeo <belangeo@gmail.com>

    * Added new object: Delay1. Delays a signal by one sample.
    - rev 1058

2012-12-19 belangeo <belangeo@gmail.com>

    * Added new objects: Min and Max. Outputs minimum or maximum between two values.
    - rev 1049

2012-12-19 belangeo <belangeo@gmail.com>

    * Added a template for extending pyo with custom objects.
    - rev 1047

2012-12-18 belangeo <belangeo@gmail.com>

    * Added "sendMidiNote(pitch, velocity, channel, timestamp) method to the Server object".
    - rev 1046

2012-11-17 belangeo <belangeo@gmail.com>

    * Added new object: Atone: First-order recursive high-pass filter with variable frequency response.
    - rev 1031

2012-11-15 belangeo <belangeo@gmail.com>

    * Added new object: SuperSaw: Roland JP-8000 Supersaw emulator.
    - rev 1029

2012-11-14 belangeo <belangeo@gmail.com>

    * Added new object: TablePut: Writes values, without repetitions, from an audio stream into a DataTable.
    - rev 1027

-------------------------------------------------------------------------------------

2012-10-26 belangeo <belangeo@gmail.com>

    * rev 1025: Release tag: 0.6.3.

2012-10-13 belangeo <belangeo@gmail.com>

    * Added new function: pa_get_devices_infos: Returns info about all devices found by Portaudio.
    - rev 1024

2012-10-12 belangeo <belangeo@gmail.com>

    * Added new object: SumOsc: Discrete summation formulae to produce complex spectra.
    - rev 1023

2012-10-11 belangeo <belangeo@gmail.com>

    * Added new method to OscReceive and OscListReceive: setValue(path, value) let the user to initialize the value for a given path.
    - rev 1022

2012-10-05 belangeo <belangeo@gmail.com>

    * Added new functions: pa_get_input_max_channels and pa_get_output_max_channels.
    - rev 1020

2012-08-17 belangeo <belangeo@gmail.com>

    * Added new object: OscTrig: An oscillator reading a waveform table with sample accurate reset signal.
    - rev 1017

2012-08-17 belangeo <belangeo@gmail.com>