@@ -2307,6 +2307,7 @@ init_pyo64(void)
     module_add_object(m, "Min_base", &MinType);
     module_add_object(m, "Max_base", &MaxType);
     module_add_object(m, "Delay1_base", &Delay1Type);
+    module_add_object(m, "RCOsc_base", &RCOscType);
 
 #ifdef COMPILE_EXTERNALS
     EXTERNAL_OBJECTS
